merging
git-svn-id: https://svn.broadinstitute.org/genepattern/branches/v2_0_1@2965 48a7a3f7-ad46-0410-b969-29950918272e